--- a/portfolio/portfolio/unit_test/unit_test_log.html
+++ b/portfolio/portfolio/unit_test/unit_test_log.html
@@ -108,6 +108,54 @@ transition numbers 2<br>
       <td style="vertical-align: top;">All passed. </td>
     </tr>
     <tr>
+      <td style="vertical-align: top;">Dispatcher<br>
+      </td>
+      <td style="vertical-align: top;"><a href="dispatcher.cf">dispatcher.cf</a></td>
+      <td style="vertical-align: top;"><a href="dispatcher_test1.mf">dispatcher_test1.mf</a></td>
+      <td style="vertical-align: top;">State numbers 3 /
+transition numbers 3<br>
+      </td>
+      <td style="vertical-align: top;">14<br>
+      </td>
+      <td style="vertical-align: top;">0<br>
+      </td>
+      <td style="vertical-align: top;"><a href="dispatcher_test1.stats">dispatcher_test1.stats</a><br>
+      </td>
+      <td style="vertical-align: top;">All passed. </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">aaaaaaa<br>
+      </td>
+      <td style="vertical-align: top;"><a href="aaaaaaa.cf">aaaaaaa.cf</a></td>
+      <td style="vertical-align: top;"><a href="aaaaaaa_test1.mf">aaaaaaa_test1.mf</a></td>
+      <td style="vertical-align: top;">State numbers 2 /
+transition numbers 2<br>
+      </td>
+      <td style="vertical-align: top;">12<br>
+      </td>
+      <td style="vertical-align: top;">0<br>
+      </td>
+      <td style="vertical-align: top;"><a href="aaaaaaa_test1.stats">aaaaaaa_test1.stats</a><br>
+      </td>
+      <td style="vertical-align: top;">All passed. </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">aaaaaaa<br>
+      </td>
+      <td style="vertical-align: top;"><a href="aaaaaaa.cf">aaaaaaa.cf</a></td>
+      <td style="vertical-align: top;"><a href="aaaaaaa_test1.mf">aaaaaaa_test1.mf</a></td>
+      <td style="vertical-align: top;">State numbers 2 /
+transition numbers 2<br>
+      </td>
+      <td style="vertical-align: top;">12<br>
+      </td>
+      <td style="vertical-align: top;">0<br>
+      </td>
+      <td style="vertical-align: top;"><a href="aaaaaaa_test1.stats">aaaaaaa_test1.stats</a><br>
+      </td>
+      <td style="vertical-align: top;">All passed. </td>
+    </tr>
+    <tr>
       <td style="vertical-align: top;"><br>
       </td>
       <td style="vertical-align: top;"><br>
