--- a/portfolio/portfolio/integration_test/integration_test_log.html
+++ b/portfolio/portfolio/integration_test/integration_test_log.html
@@ -71,6 +71,19 @@ sure to include all information listed in the project handouts.<br>
       </td>
     </tr>
     <tr>
+      <td style="vertical-align: top;">SD 1A<br>
+      </td>
+      <td style="vertical-align: top;"><a href="sd1a.cf">sd1a.cf</a><br>
+      </td>
+      <td style="vertical-align: top;"><a href="sd1a.mf">sd1a.mf</a></td>
+      <td style="vertical-align: top;">6<br>
+      </td>
+      <td style="vertical-align: top;">0<br>
+      </td>
+      <td style="vertical-align: top;"><a href="sd1a.stats">sd1a.stats</a></td>
+      <td style="vertical-align: top;">All Passed</td>
+    </tr>
+    <tr>
       <td style="vertical-align: top;"><br>
       </td>
       <td style="vertical-align: top;"><br>
