--- a/portfolio/portfolio/integration_test/integration_test_log.html
+++ b/portfolio/portfolio/integration_test/integration_test_log.html
@@ -84,6 +84,19 @@ sure to include all information listed in the project handouts.<br>
       <td style="vertical-align: top;">All Passed</td>
     </tr>
     <tr>
+      <td style="vertical-align: top;">SD 1C<br>
+      </td>
+      <td style="vertical-align: top;"><a href="sd1c.cf">sd1c.cf</a><br>
+      </td>
+      <td style="vertical-align: top;"><a href="sd1c.mf">sd1c.mf</a></td>
+      <td style="vertical-align: top;">9<br>
+      </td>
+      <td style="vertical-align: top;">0<br>
+      </td>
+      <td style="vertical-align: top;"><a href="sd1c.stats">sd1c.stats</a></td>
+      <td style="vertical-align: top;">All Passed</td>
+    </tr>
+    <tr>
       <td style="vertical-align: top;"><br>
       </td>
       <td style="vertical-align: top;"><br>
