qiang sd7a lantern

--- a/portfolio/portfolio/integration_test/integration_test_log.html
+++ b/portfolio/portfolio/integration_test/integration_test_log.html
@@ -55,6 +55,22 @@ sure to include all information listed in the project handouts.<br>
       <td style="vertical-align: top;">All Passed</td>
     </tr>
     <tr>
+        <td style="vertical-align: top;">SD 7A<br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd7a.cf">sd7a.cf</a><br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd7a.mf">sd7a.mf<br>
+            </td>
+        <td style="vertical-align: top;">12<br>
+        </td>
+        <td style="vertical-align: top;">0<br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd7a.stats">sd7a.stats<br>
+            </td>
+        <td style="vertical-align: top;">All Passed<br>
+        </td>
+    </tr>
+    <tr>
       <td style="vertical-align: top;">SD 7B<br>
       </td>
       <td style="vertical-align: top;"><a href="sd7b.cf">sd7b.cf</a><br>
