--- a/portfolio/portfolio/traceability/sc_code.html
+++ b/portfolio/portfolio/traceability/sc_code.html
@@ -30,39 +30,45 @@ Traceability peformed by:&nbsp; &lt;Shen Yu (sheny)&gt;<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">110<br>
+            <td style="vertical-align: top;">116<br>
             </td>
             <td style="vertical-aligh: top;">T 5.1<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">117<br>
+            <td style="vertical-align: top;">123<br>
             </td>
             <td style="vertical-aligh: top;">T 5.5<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">127<br>
+            <td style="vertical-align: top;">133<br>
             </td>
             <td style="vertical-aligh: top;">T 5.2<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">140<br>
+            <td style="vertical-align: top;">146<br>
             </td>
             <td style="vertical-aligh: top;">T 5.3<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">148<br>
+            <td style="vertical-align: top;">154<br>
             </td>
             <td style="vertical-aligh: top;">T 5.4<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">152<br>
+            <td style="vertical-align: top;">158<br>
             </td>
             <td style="vertical-aligh: top;">T 5.5<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">162<br>
+            </td>
+            <td style="vertical-aligh: top;">T 5.7<br>
             </td>
         </tr>
     </tbody>
