--- a/portfolio/portfolio/unit_test/unit_test_log.html
+++ b/portfolio/portfolio/unit_test/unit_test_log.html
@@ -50,7 +50,7 @@ include all information listed in the project handouts.<br>
       <td style="vertical-align: top;"><a href="doorcontrol_test1.mf">doorcontrol_test1.mf</a></td>
       <td style="vertical-align: top;">State numbers 4 / Transition numbers 6<br>
       </td>
-      <td style="vertical-align: top;">13<br>
+      <td style="vertical-align: top;">15<br>
       </td>
       <td style="vertical-align: top;">0<br>
       </td>
@@ -106,6 +106,22 @@ transition numbers 2<br>
       <td style="vertical-align: top;"><a href="carbuttoncontrol_test1.stats">carbuttoncontrol_test1.stats</a><br>
       </td>
       <td style="vertical-align: top;">All passed. </td>
+    </tr>
+    <tr>
+        <td style="vertical-align: top;">LanternControl<br>
+        </td>
+        <td style="vertical-align: top;"><a href="lanterncontrol.cf">lanterncontrol.cf</a></td>
+        <td style="vertical-align: top;"><a href="lanterncontrol_test1.mf">lanterncontrol_test1.mf</a></td>
+        <td style="vertical-align: top;">State numbers 3 / Transition numbers 4<br>
+        </td>
+        <td style="vertical-align: top;">9<br>
+        </td>
+        <td style="vertical-align: top;">0<br>
+        </td>
+        <td style="vertical-align: top;">
+            <a href="lanterncontrol_test1.stats">lanterncontrol_test1.stats</a><br>
+        </td>
+        <td style="vertical-align: top;">All passed. </td>
     </tr>
     <tr>
       <td style="vertical-align: top;"><br>
