--- a/portfolio/portfolio/integration_test/integration_test_log.html
+++ b/portfolio/portfolio/integration_test/integration_test_log.html
@@ -42,6 +42,19 @@ sure to include all information listed in the project handouts.<br>
       </td>
     </tr>
     <tr>
+        <td style="vertical-align: top;">SD 1A<br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd1a.cf">sd1a.cf</a><br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd1a.mf">sd1a.mf</a></td>
+        <td style="vertical-align: top;">6<br>
+        </td>
+        <td style="vertical-align: top;">0<br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd1a.stats">sd1a.stats</a></td>
+        <td style="vertical-align: top;">All Passed</td>
+    </tr>
+    <tr>
       <td style="vertical-align: top;">SD 1B<br>
       </td>
       <td style="vertical-align: top;"><a href="sd1b.cf">sd1b.cf</a><br>
@@ -53,6 +66,35 @@ sure to include all information listed in the project handouts.<br>
       </td>
       <td style="vertical-align: top;"><a href="sd1b.stats">sd1b.stats</a></td>
       <td style="vertical-align: top;">All Passed</td>
+    </tr>
+    <tr>
+        <td style="vertical-align: top;">SD 1C<br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd1c.cf">sd1c.cf</a><br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd1c.mf">sd1c.mf</a></td>
+        <td style="vertical-align: top;">9<br>
+        </td>
+        <td style="vertical-align: top;">0<br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd1c.stats">sd1c.stats</a></td>
+        <td style="vertical-align: top;">All Passed</td>
+    </tr>
+    <tr>
+        <td style="vertical-align: top;">SD 5B<br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd5b.cf">sd5b.cf<br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd5b.mf">sd5b.mf<br>
+        </td>
+        <td style="vertical-align: top;">4<br>
+        </td>
+        <td style="vertical-align: top;">0<br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd5b.stats">sd5b.stats<br>
+        </td>
+        <td style="vertical-align: top;">All Passed<br>
+        </td>
     </tr>
     <tr>
         <td style="vertical-align: top;">SD 7A<br>
@@ -84,48 +126,6 @@ sure to include all information listed in the project handouts.<br>
       <td style="vertical-align: top;"><a href="sd7b.stats">sd7b.stats<br>
       </td>
       <td style="vertical-align: top;">All Passed<br>
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top;">SD 1A<br>
-      </td>
-      <td style="vertical-align: top;"><a href="sd1a.cf">sd1a.cf</a><br>
-      </td>
-      <td style="vertical-align: top;"><a href="sd1a.mf">sd1a.mf</a></td>
-      <td style="vertical-align: top;">6<br>
-      </td>
-      <td style="vertical-align: top;">0<br>
-      </td>
-      <td style="vertical-align: top;"><a href="sd1a.stats">sd1a.stats</a></td>
-      <td style="vertical-align: top;">All Passed</td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top;">SD 1C<br>
-      </td>
-      <td style="vertical-align: top;"><a href="sd1c.cf">sd1c.cf</a><br>
-      </td>
-      <td style="vertical-align: top;"><a href="sd1c.mf">sd1c.mf</a></td>
-      <td style="vertical-align: top;">9<br>
-      </td>
-      <td style="vertical-align: top;">0<br>
-      </td>
-      <td style="vertical-align: top;"><a href="sd1c.stats">sd1c.stats</a></td>
-      <td style="vertical-align: top;">All Passed</td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
       </td>
     </tr>
     <tr>
