--- a/portfolio/portfolio/integration_test/integration_test_log.html
+++ b/portfolio/portfolio/integration_test/integration_test_log.html
@@ -81,6 +81,19 @@ sure to include all information listed in the project handouts.<br>
         <td style="vertical-align: top;">All Passed</td>
     </tr>
     <tr>
+        <td style="vertical-align: top;">SD 4A<br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd4a.cf">sd4a.cf</a><br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd4a.mf">sd4a.mf</a></td>
+        <td style="vertical-align: top;">4<br>
+        </td>
+        <td style="vertical-align: top;">0<br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd4a.stats">sd4a.stats</a></td>
+        <td style="vertical-align: top;">All Passed</td>
+    </tr>
+    <tr>
         <td style="vertical-align: top;">SD 5B<br>
         </td>
         <td style="vertical-align: top;"><a href="sd5b.cf">sd5b.cf<br>
