--- a/portfolio/portfolio/unit_test/unit_test_log.html
+++ b/portfolio/portfolio/unit_test/unit_test_log.html
@@ -64,8 +64,7 @@ include all information listed in the project handouts.<br>
       </td>
       <td style="vertical-align: top;"><a href="hallbuttoncontrol.cf">hallbuttoncontrol.cf</a></td>
       <td style="vertical-align: top;"><a href="hallbuttoncontrol_test1.mf">hallbuttoncontrol_test1.mf</a></td>
-      <td style="vertical-align: top;">State numbers 2/
-transition numbers 2<br>
+      <td style="vertical-align: top;">State numbers 2/Transition numbers 2<br>
       </td>
       <td style="vertical-align: top;">12<br>
       </td>
@@ -80,8 +79,7 @@ transition numbers 2<br>
       </td>
       <td style="vertical-align: top;"><a href="drivecontrol.cf">drivecontrol.cf</a></td>
       <td style="vertical-align: top;"><a href="drivecontrol_test1.mf">drivecontrol_test1.mf</a></td>
-      <td style="vertical-align: top;">State numbers 2/
-transition numbers 2<br>
+      <td style="vertical-align: top;">State numbers 2/Transition numbers 2<br>
       </td>
       <td style="vertical-align: top;">15<br>
       </td>
@@ -96,8 +94,7 @@ transition numbers 2<br>
       </td>
       <td style="vertical-align: top;"><a href="carbuttoncontrol.cf">carbuttoncontrol.cf</a></td>
       <td style="vertical-align: top;"><a href="carbuttoncontrol_test1.mf">carbuttoncontrol_test1.mf</a></td>
-      <td style="vertical-align: top;">State numbers 2 /
-transition numbers 2<br>
+      <td style="vertical-align: top;">State numbers 2 /Transition numbers 2<br>
       </td>
       <td style="vertical-align: top;">12<br>
       </td>
@@ -108,7 +105,6 @@ transition numbers 2<br>
       <td style="vertical-align: top;">All passed. </td>
     </tr>
     <tr>
-<<<<<<< HEAD
         <td style="vertical-align: top;">LanternControl<br>
         </td>
         <td style="vertical-align: top;"><a href="lanterncontrol.cf">lanterncontrol.cf</a></td>
@@ -123,13 +119,12 @@ transition numbers 2<br>
             <a href="lanterncontrol_test1.stats">lanterncontrol_test1.stats</a><br>
         </td>
         <td style="vertical-align: top;">All passed. </td>
-=======
+    <tr>
       <td style="vertical-align: top;">Dispatcher<br>
       </td>
       <td style="vertical-align: top;"><a href="dispatcher.cf">dispatcher.cf</a></td>
       <td style="vertical-align: top;"><a href="dispatcher_test1.mf">dispatcher_test1.mf</a></td>
-      <td style="vertical-align: top;">State numbers 3 /
-transition numbers 3<br>
+      <td style="vertical-align: top;">State numbers 3 /Transition numbers 3<br>
       </td>
       <td style="vertical-align: top;">14<br>
       </td>
@@ -138,39 +133,6 @@ transition numbers 3<br>
       <td style="vertical-align: top;"><a href="dispatcher_test1.stats">dispatcher_test1.stats</a><br>
       </td>
       <td style="vertical-align: top;">All passed. </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top;">aaaaaaa<br>
-      </td>
-      <td style="vertical-align: top;"><a href="aaaaaaa.cf">aaaaaaa.cf</a></td>
-      <td style="vertical-align: top;"><a href="aaaaaaa_test1.mf">aaaaaaa_test1.mf</a></td>
-      <td style="vertical-align: top;">State numbers 2 /
-transition numbers 2<br>
-      </td>
-      <td style="vertical-align: top;">12<br>
-      </td>
-      <td style="vertical-align: top;">0<br>
-      </td>
-      <td style="vertical-align: top;"><a href="aaaaaaa_test1.stats">aaaaaaa_test1.stats</a><br>
-      </td>
-      <td style="vertical-align: top;">All passed. </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top;">aaaaaaa<br>
-      </td>
-      <td style="vertical-align: top;"><a href="aaaaaaa.cf">aaaaaaa.cf</a></td>
-      <td style="vertical-align: top;"><a href="aaaaaaa_test1.mf">aaaaaaa_test1.mf</a></td>
-      <td style="vertical-align: top;">State numbers 2 /
-transition numbers 2<br>
-      </td>
-      <td style="vertical-align: top;">12<br>
-      </td>
-      <td style="vertical-align: top;">0<br>
-      </td>
-      <td style="vertical-align: top;"><a href="aaaaaaa_test1.stats">aaaaaaa_test1.stats</a><br>
-      </td>
-      <td style="vertical-align: top;">All passed. </td>
->>>>>>> f03569f8089cd8d62999e42780e5ef0773dc23d0
     </tr>
     <tr>
       <td style="vertical-align: top;"><br>
