--- a/portfolio/portfolio/unit_test/unit_test_log.html
+++ b/portfolio/portfolio/unit_test/unit_test_log.html
@@ -136,32 +136,17 @@ include all information listed in the project handouts.<br>
       <td style="vertical-align: top;">All passed. </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">aaaaaaa<br>
+      <td style="vertical-align: top;">CarPositionControl<br>
       </td>
-      <td style="vertical-align: top;"><a href="aaaaaaa.cf">aaaaaaa.cf</a></td>
-      <td style="vertical-align: top;"><a href="aaaaaaa_test1.mf">aaaaaaa_test1.mf</a></td>
-      <td style="vertical-align: top;">State numbers 2 / Transition numbers 2<br>
+      <td style="vertical-align: top;"><a href="carpositioncontrol.cf">carpositioncontrol.cf</a></td>
+      <td style="vertical-align: top;"><a href="carpositioncontrol_test1.mf">carpositioncontrol_test1.mf</a></td>
+      <td style="vertical-align: top;">State numbers 8 / Transition numbers 14<br>
       </td>
-      <td style="vertical-align: top;">12<br>
-      </td>
-      <td style="vertical-align: top;">0<br>
-      </td>
-      <td style="vertical-align: top;"><a href="aaaaaaa_test1.stats">aaaaaaa_test1.stats</a><br>
-      </td>
-      <td style="vertical-align: top;">All passed. </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top;">aaaaaaa<br>
-      </td>
-      <td style="vertical-align: top;"><a href="aaaaaaa.cf">aaaaaaa.cf</a></td>
-      <td style="vertical-align: top;"><a href="aaaaaaa_test1.mf">aaaaaaa_test1.mf</a></td>
-      <td style="vertical-align: top;">State numbers 2 / Transition numbers 2<br>
-      </td>
-      <td style="vertical-align: top;">12<br>
+      <td style="vertical-align: top;">30<br>
       </td>
       <td style="vertical-align: top;">0<br>
       </td>
-      <td style="vertical-align: top;"><a href="aaaaaaa_test1.stats">aaaaaaa_test1.stats</a><br>
+      <td style="vertical-align: top;"><a href="carpositioncontrol_test1.stats">carpositioncontrol_test1.stats</a><br>
       </td>
       <td style="vertical-align: top;">All passed. </td>
     </tr>
