sd code qiang lantern

--- a/portfolio/portfolio/traceability/sc_code.html
+++ b/portfolio/portfolio/traceability/sc_code.html
@@ -129,6 +129,45 @@ Traceability peformed by:&nbsp; &lt;Xianle Wang (xianlew)&gt;<br>
     </tbody>
 </table>
 <!--DriveControl End-->
+<!--Table for LanternControl Qiang-->
+<h2>LanternControl</h2>
+Author Name:&nbsp; &lt;Qiang Zhang (qiangz)&gt;<br>
+Traceability peformed by:&nbsp; &lt;Shen Yu (sheny)&gt;<br>
+<table style="width: 400px; height: 100px;" border="1" cellpadding="3" frame="border">
+    <tbody>
+        <tr>
+            <td style="vertical-align: top;">Line Number<br>
+            </td>
+            <td style="vertical-aligh: top;">Transition Number<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">112<br>
+            </td>
+            <td style="vertical-aligh: top;">T 7.1<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">117<br>
+            </td>
+            <td style="vertical-aligh: top;">T 7.2<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">133<br>
+            </td>
+            <td style="vertical-aligh: top;">T 7.3<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">147<br>
+            </td>
+            <td style="vertical-aligh: top;">T 7.4<br>
+            </td>
+        </tr>
+    </tbody>
+</table>
+<!--DoorControl End-->
 <h2>CarButtonControl</h2>
 Author Name:&nbsp; &lt;Shen Yu (sheny)&gt;<br>
 Traceability peformed by:&nbsp; &lt;Qiang Zhang (qiangz)&gt;<br>
