--- a/portfolio/portfolio/traceability/sc_code.html
+++ b/portfolio/portfolio/traceability/sc_code.html
@@ -156,6 +156,103 @@ Traceability peformed by:&nbsp; &lt;Qiang Zhang (qiangz)&gt;<br>
     </tbody>
 </table>
 <!-- HallButtonControl End -->
+<h2>CarPositionControl</h2>
+Author Name:&nbsp; &lt;Shen Yu (sheny)&gt;<br>
+Traceability peformed by:&nbsp; &lt;Qiang Zhang (qiangz)&gt;<br>
+<table style="width: 400px; height: 100px;" border="1" cellpadding="3" frame="border">
+    <tbody>
+        <tr>
+            <td style="vertical-align: top;">Line Number<br>
+            </td>
+            <td style="vertical-aligh: top;">Transition Number<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">83<br>
+            </td>
+            <td style="vertical-aligh: top;">T 10.1<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">94<br>
+            </td>
+            <td style="vertical-aligh: top;">T 10.2<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">98<br>
+            </td>
+            <td style="vertical-aligh: top;">T 10.3<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">109<br>
+            </td>
+            <td style="vertical-aligh: top;">T 10.4<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">113<br>
+            </td>
+            <td style="vertical-aligh: top;">T 10.5<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">124<br>
+            </td>
+            <td style="vertical-aligh: top;">T 10.6<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">128<br>
+            </td>
+            <td style="vertical-aligh: top;">T 10.7<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">139<br>
+            </td>
+            <td style="vertical-aligh: top;">T 10.8<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">143<br>
+            </td>
+            <td style="vertical-aligh: top;">T 10.9<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">154<br>
+            </td>
+            <td style="vertical-aligh: top;">T 10.10<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">158<br>
+            </td>
+            <td style="vertical-aligh: top;">T 10.11<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">169<br>
+            </td>
+            <td style="vertical-aligh: top;">T 10.12<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">173<br>
+            </td>
+            <td style="vertical-aligh: top;">T 10.13<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">184<br>
+            </td>
+            <td style="vertical-aligh: top;">T 10.14<br>
+            </td>
+        </tr>
+    </tbody>
+</table>
 <span style="font-weight: bold;"><br>
 </span>&lt;Fill in the rest of the controllers&gt;<br>
 <br>
