new door control

--- a/portfolio/portfolio/elevatorcontrol/package.html
+++ b/portfolio/portfolio/elevatorcontrol/package.html
@@ -24,6 +24,10 @@ of the latest required simulator release.</span><br>
   <li><a href="CarButtonControl.java">CarButtonControl.java</a> - the controller for CarButton</li>
   <li><a href="DriveControl.java">DriveControl.java</a> - the controller for Drive</li>
   <li><a href="DoorControl.java">DoorControl.java</a> - the controller for Door</li>
+  <li><a href="CarPositionControl.java">CarPositionControl.java</a> - the controller for CarPosition</li>
+  <li><a href="LanternControl.java">LanternControl.java</a> - the controller for CarLantern</li>
+  <li><a href="Dispatcher.java">Dispatcher.java</a> - the controller for Dispatcher</li>
+
   <li>...</li>
 </ul>
 <h2>Translator files</h2>
