--- a/portfolio/portfolio/integration_test/integration_test_log.html
+++ b/portfolio/portfolio/integration_test/integration_test_log.html
@@ -142,6 +142,19 @@ sure to include all information listed in the project handouts.<br>
       </td>
     </tr>
     <tr>
+        <td style="vertical-align: top;">SD 9A<br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd9a.cf">sd9a.cf</a><br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd9a.mf">sd9a.mf</a></td>
+        <td style="vertical-align: top;">15<br>
+        </td>
+        <td style="vertical-align: top;">0<br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd9a.stats">sd9a.stats</a></td>
+        <td style="vertical-align: top;">All Passed</td>
+    </tr>
+    <tr>
       <td style="vertical-align: top;"><br>
       </td>
       <td style="vertical-align: top;"><br>
