--- a/portfolio/portfolio/traceability/sc_code.html
+++ b/portfolio/portfolio/traceability/sc_code.html
@@ -292,6 +292,39 @@ Traceability peformed by:&nbsp; &lt;Qiang Zhang (qiangz)&gt;<br>
         </tr>
     </tbody>
 </table>
+
+<h2>Dispatcher</h2>
+Author Name:&nbsp; &lt;Xianle Wang (xianlew)&gt;<br>
+Traceability peformed by:&nbsp; &lt;Qiang Zhang (qiangz)&gt;<br>
+<!--Table for HallButtonControl -->
+<table style="width: 400px; height: 100px;" border="1" cellpadding="3" frame="border">
+    <tbody>
+        <tr>
+            <td style="vertical-align: top;">Line Number<br>
+            </td>
+            <td style="vertical-aligh: top;">Transition Number<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">165<br>
+            </td>
+            <td style="vertical-aligh: top;">T 11.1<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">185<br>
+            </td>
+            <td style="vertical-aligh: top;">T 11.2<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">169<br>
+            </td>
+            <td style="vertical-aligh: top;">T 11.3<br>
+            </td>
+        </tr>
+    </tbody>
+</table>
 <span style="font-weight: bold;"><br>
 </span>&lt;Fill in the rest of the controllers&gt;<br>
 <br>
