--- a/portfolio/portfolio/integration_test/integration_test_log.html
+++ b/portfolio/portfolio/integration_test/integration_test_log.html
@@ -110,6 +110,22 @@ sure to include all information listed in the project handouts.<br>
         </td>
     </tr>
     <tr>
+        <td style="vertical-align: top;">SD 6A<br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd6a.cf">sd6a.cf<br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd6a.mf">sd6a.mf<br>
+        </td>
+        <td style="vertical-align: top;">7<br>
+        </td>
+        <td style="vertical-align: top;">0<br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd6a.stats">sd6a.stats<br>
+        </td>
+        <td style="vertical-align: top;">All Passed<br>
+        </td>
+    </tr>
+    <tr>
         <td style="vertical-align: top;">SD 7A<br>
         </td>
         <td style="vertical-align: top;"><a href="sd7a.cf">sd7a.cf</a><br>
