--- a/portfolio/portfolio/scen_sd/scen_sd.html
+++ b/portfolio/portfolio/scen_sd/scen_sd.html
@@ -371,10 +371,10 @@ suffice.</p>
 
 <h3> Scenario: </h3>
 <ol start="1" type="1">
+  <li>CarPosition is <b>x</b>. </li>
   <li>Car is approaching floor <b>y</b>. </li>
+  <li>CarPosition is <b>y</b>
   <li>Car stops at floor <b>y</b>. </li>
-  <li>Car call button light [<b>y</b>, <b>g</b>] is off. </li>
-  <li>Hall call button light [<b>y</b>, <b>g</b>, <b>d</b>] is off. </li>
 </ol>
 <h3> Post-Conditions: </h3>
 <ul type="disc">
@@ -384,7 +384,7 @@ suffice.</p>
 </ul>
 <h3> Sequence Diagram: </h3>
 <p> <a href="Case6.png"><img src="Case6.png" alt="1A" name="_x0000_i1027"
- style="border: 0px solid ; width: 1253px; height: 266px;"></a> </p>
+ style="border: 0px solid ; width: 717px; height: 263px;"></a> </p>
 
 <p> <a href="proj2_scenario6.gif"><br>
 </a> </p>
