--- a/portfolio/portfolio/integration_test/integration_test_log.html
+++ b/portfolio/portfolio/integration_test/integration_test_log.html
@@ -81,6 +81,19 @@ sure to include all information listed in the project handouts.<br>
         <td style="vertical-align: top;">All Passed</td>
     </tr>
     <tr>
+        <td style="vertical-align: top;">SD 2A<br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd2a.cf">sd2a.cf</a><br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd2a.mf">sd2a.mf</a></td>
+        <td style="vertical-align: top;">5<br>
+        </td>
+        <td style="vertical-align: top;">0<br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd2a.stats">sd2a.stats</a></td>
+        <td style="vertical-align: top;">All Passed</td>
+    </tr>
+    <tr>
         <td style="vertical-align: top;">SD 2B<br>
         </td>
         <td style="vertical-align: top;"><a href="sd2b.cf">sd2b.cf</a><br>
