--- a/portfolio/portfolio/integration_test/integration_test_log.html
+++ b/portfolio/portfolio/integration_test/integration_test_log.html
@@ -107,6 +107,19 @@ sure to include all information listed in the project handouts.<br>
         <td style="vertical-align: top;">All Passed</td>
     </tr>
     <tr>
+        <td style="vertical-align: top;">SD 3A<br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd3a.cf">sd3a.cf</a><br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd3a.mf">sd3a.mf</a></td>
+        <td style="vertical-align: top;">15<br>
+        </td>
+        <td style="vertical-align: top;">0<br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd3a.stats">sd3a.stats</a></td>
+        <td style="vertical-align: top;">All Passed</td>
+    </tr>
+    <tr>
         <td style="vertical-align: top;">SD 4A<br>
         </td>
         <td style="vertical-align: top;"><a href="sd4a.cf">sd4a.cf</a><br>
@@ -179,6 +192,22 @@ sure to include all information listed in the project handouts.<br>
       <td style="vertical-align: top;">0<br>
       </td>
       <td style="vertical-align: top;"><a href="sd7b.stats">sd7b.stats<br>
+      </td>
+      <td style="vertical-align: top;">All Passed<br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">SD 7C<br>
+      </td>
+      <td style="vertical-align: top;"><a href="sd7c.cf">sd7c.cf</a><br>
+      </td>
+      <td style="vertical-align: top;"><a href="sd7c.mf">sd7c.mf<br>
+      </td>
+      <td style="vertical-align: top;">15<br>
+      </td>
+      <td style="vertical-align: top;">0<br>
+      </td>
+      <td style="vertical-align: top;"><a href="sd7c.stats">sd7c.stats<br>
       </td>
       <td style="vertical-align: top;">All Passed<br>
       </td>
