--- a/portfolio/portfolio/reqs/requirements2.html
+++ b/portfolio/portfolio/reqs/requirements2.html
@@ -2662,7 +2662,7 @@
                     </td>
                     <td style="vertical-align: top;">
                         mAtFloor[f,b]&nbsp;==&nbsp;true&nbsp;&&&nbsp;
-                        mDesiredFloor.f&nbsp;==&nbsp;CurrentFloor&nbsp;&&
+                        mDoorClosed[b,*]&nbsp;==&nbsp;false&nbsp;&&
                         &nbsp;CarCall[f,b]&nbsp;==&nbsp;false<br>
                     </td>
                 </tr>
