--- a/portfolio/portfolio/integration_test/integration_test_log.html
+++ b/portfolio/portfolio/integration_test/integration_test_log.html
@@ -133,6 +133,22 @@ sure to include all information listed in the project handouts.<br>
         <td style="vertical-align: top;">All Passed</td>
     </tr>
     <tr>
+        <td style="vertical-align: top;">SD 5A<br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd5a.cf">sd5a.cf<br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd5a.mf">sd5a.mf<br>
+        </td>
+        <td style="vertical-align: top;">4<br>
+        </td>
+        <td style="vertical-align: top;">0<br>
+        </td>
+        <td style="vertical-align: top;"><a href="sd5a.stats">sd5a.stats<br>
+        </td>
+        <td style="vertical-align: top;">All Passed<br>
+        </td>
+    </tr>
+    <tr>
         <td style="vertical-align: top;">SD 5B<br>
         </td>
         <td style="vertical-align: top;"><a href="sd5b.cf">sd5b.cf<br>
