--- a/portfolio/portfolio/traceability/sc_code.html
+++ b/portfolio/portfolio/traceability/sc_code.html
@@ -115,15 +115,63 @@ Traceability peformed by:&nbsp; &lt;Xianle Wang (xianlew)&gt;<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">292<br>
+            <td style="vertical-align: top;">221<br>
             </td>
             <td style="vertical-aligh: top;">T 6.1<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">318<br>
+            <td style="vertical-align: top;">248<br>
             </td>
             <td style="vertical-aligh: top;">T 6.2<br>
+            </td>
+        </tr>
+		  <tr>
+            <td style="vertical-align: top;">225<br>
+            </td>
+            <td style="vertical-aligh: top;">T 6.3<br>
+            </td>
+        </tr>
+		  <tr>
+            <td style="vertical-align: top;">284<br>
+            </td>
+            <td style="vertical-aligh: top;">T 6.4<br>
+            </td>
+        </tr>
+		  <tr>
+            <td style="vertical-align: top;">229<br>
+            </td>
+            <td style="vertical-aligh: top;">T 6.5<br>
+            </td>
+        </tr>
+		   <tr>
+            <td style="vertical-align: top;">263<br>
+            </td>
+            <td style="vertical-aligh: top;">T 6.6<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">233<br>
+            </td>
+            <td style="vertical-aligh: top;">T 6.7<br>
+            </td>
+        </tr>
+		  <tr>
+            <td style="vertical-align: top;">310<br>
+            </td>
+            <td style="vertical-aligh: top;">T 6.8<br>
+            </td>
+        </tr>
+		  <tr>
+            <td style="vertical-align: top;">288<br>
+            </td>
+            <td style="vertical-aligh: top;">T 6.9<br>
+            </td>
+        </tr>
+		  <tr>
+            <td style="vertical-align: top;">314<br>
+            </td>
+            <td style="vertical-aligh: top;">T 6.10<br>
             </td>
         </tr>
     </tbody>
