--- a/portfolio/portfolio/integration_test/integration_test_log.html
+++ b/portfolio/portfolio/integration_test/integration_test_log.html
@@ -171,7 +171,7 @@ sure to include all information listed in the project handouts.<br>
         </td>
         <td style="vertical-align: top;"><a href="sd6a.mf">sd6a.mf<br>
         </td>
-        <td style="vertical-align: top;">7<br>
+        <td style="vertical-align: top;">9<br>
         </td>
         <td style="vertical-align: top;">0<br>
         </td>
@@ -224,6 +224,22 @@ sure to include all information listed in the project handouts.<br>
       <td style="vertical-align: top;">0<br>
       </td>
       <td style="vertical-align: top;"><a href="sd7c.stats">sd7c.stats<br>
+      </td>
+      <td style="vertical-align: top;">All Passed<br>
+      </td>
+    </tr>
+	 <tr>
+      <td style="vertical-align: top;">SD 8A<br>
+      </td>
+      <td style="vertical-align: top;"><a href="sd8a.cf">sd8a.cf</a><br>
+      </td>
+      <td style="vertical-align: top;"><a href="sd8a.mf">sd8a.mf<br>
+      </td>
+      <td style="vertical-align: top;">13<br>
+      </td>
+      <td style="vertical-align: top;">0<br>
+      </td>
+      <td style="vertical-align: top;"><a href="sd8a.stats">sd8a.stats<br>
       </td>
       <td style="vertical-align: top;">All Passed<br>
       </td>
