--- a/portfolio/portfolio/acceptance_test/acceptance_test_log.html
+++ b/portfolio/portfolio/acceptance_test/acceptance_test_log.html
@@ -8,8 +8,8 @@
     <body>
         <h1 style="text-align: center;">18649 - Acceptance Test Log<br>
         </h1>
-        <hr style="width: 100%; height: 2px;">18649 &lt;semester&gt;<br>
-        Group x - Student names and andrewIds<br>
+        <hr style="width: 100%; height: 2px;">18649 &lt;Fall 2013&gt;<br>
+        Group 17 - Qiang Zhang(qiangz), Shen Yu(sheny), Jiang He(jiangh), Xianle Wang(xianlew)<br>
         <hr style="width: 100%; height: 2px;">The table below describes the
         accpetance tests and summarizes the current acceptance test
         results.&nbsp; For
@@ -55,96 +55,73 @@
                     </td>
                     <td style="vertical-align: top;">8675309<br> <!--Random Seed-->
                     </td>
-                    <td style="vertical-align: top;">3:10<br> <!--Time to Complete-->
+                    <td style="vertical-align: top;">7157.836s<br> <!--Time to Complete-->
                     </td>
-                    <td style="vertical-align: top;">2000.0<br> <!--Performance Scores-->
+                    <td style="vertical-align: top;">
+                        Delivery: 2775.525<br> <!--Performance Scores-->
+                        Satisfaction: 350.0<br>
                     </td>
                     <td style="vertical-align: top;"><a href="elevator-proj7acceptance1.stats">
                         <span style="text-decoration: underline;">elevator-proj7acceptance1.stats</span></a><br>
                     </td>
                     <td style="vertical-align: top;"> <!--Notes-->
                     </td>
-                    <td style="vertical-align: top;"> Stats from running Proj7PerformanceMonitor<br>
+                    <td style="vertical-align: top;">
+                        Overweight Count = 0 <br>
+                        NoCall Count = 52 <br>
+                        Reversal Count = 0 <br>
                     </td>
                 </tr>
                 <tr>
-                    <td style="vertical-align: top;">...<br>
+                    <td style="vertical-align: top;"><a href="proj7acceptance2.pass">proj7acceptance2.pass</a><br>
                     </td>
-                    <td style="vertical-align: top;"><br>
+                    <td style="vertical-align: top;"> Short run with a little more passenger arrivals distributed not evenly over all floors. <br> <!--Discription-->
                     </td>
-                    <td style="vertical-align: top;"><br>
+                    <td style="vertical-align: top;">all passengers delivered / <br> <!--Test Status-->
                     </td>
-                    <td style="vertical-align: top;"><br>
+                    <td style="vertical-align: top;">8675309<br> <!--Random Seed-->
                     </td>
-                    <td style="vertical-align: top;"><br>
+                    <td style="vertical-align: top;">3464.79s<br> <!--Time to Complete-->
                     </td>
-                    <td style="vertical-align: top;"><br>
+                    <td style="vertical-align: top;">
+                        Delivery: 8287.776<br> <!--Performance Scores-->
+                        Satisfaction: 421.059<br>
                     </td>
-                    <td style="vertical-align: top;"><br>
+                    <td style="vertical-align: top;"><a href="elevator-proj7acceptance2.stats">
+                        <span style="text-decoration: underline;">elevator-proj7acceptance2.stats</span></a><br>
                     </td>
-                    <td style="vertical-align: top;"><br>
+                    <td style="vertical-align: top;"> <!--Notes-->
                     </td>
-                    <td style="vertical-align: top;"><br>
-                    </td>
-                </tr>
-                <tr>
-                    <td style="vertical-align: top;"><br>
-                    </td>
-                    <td style="vertical-align: top;"><br>
-                    </td>
-                    <td style="vertical-align: top;"><br>
-                    </td>
-                    <td style="vertical-align: top;"><br>
-                    </td>
-                    <td style="vertical-align: top;"><br>
-                    </td>
-                    <td style="vertical-align: top;"><br>
-                    </td>
-                    <td style="vertical-align: top;"><br>
-                    </td>
-                    <td style="vertical-align: top;"><br>
-                    </td>
-                    <td style="vertical-align: top;"><br>
+                    <td style="vertical-align: top;">
+                        Overweight Count = 4 <br>
+                        NoCall Count = 13 <br>
+                        Reversal Count = 0 <br>
                     </td>
                 </tr>
                 <tr>
-                    <td style="vertical-align: top;"><br>
+                    <td style="vertical-align: top;"><a href="proj7acceptance3.pass">proj7acceptance3.pass</a><br>
                     </td>
-                    <td style="vertical-align: top;"><br>
+                    <td style="vertical-align: top;"> Short run with more passenger arrivals distributed not evenly over all floors. <br> <!--Discription-->
                     </td>
-                    <td style="vertical-align: top;"><br>
+                    <td style="vertical-align: top;">all passengers delivered / <br> <!--Test Status-->
                     </td>
-                    <td style="vertical-align: top;"><br>
+                    <td style="vertical-align: top;">8675309<br> <!--Random Seed-->
                     </td>
-                    <td style="vertical-align: top;"><br>
+                    <td style="vertical-align: top;">2401.027<br> <!--Time to Complete-->
                     </td>
-                    <td style="vertical-align: top;"><br>
+                    <td style="vertical-align: top;">
+                        Delivery: 5212.335<br> <!--Performance Scores-->
+                        Satisfaction: 482.941<br>
                     </td>
-                    <td style="vertical-align: top;"><br>
+                    <td style="vertical-align: top;"><a href="elevator-proj7acceptance3.stats">
+                        <span style="text-decoration: underline;">elevator-proj7acceptance3.stats</span></a><br>
                     </td>
-                    <td style="vertical-align: top;"><br>
+                    <td style="vertical-align: top;"> <!--Notes-->
                     </td>
-                    <td style="vertical-align: top;"><br>
-                    </td>
-                </tr>
-                <tr>
-                    <td style="vertical-align: top;"><br>
-                    </td>
-                    <td style="vertical-align: top;"><br>
-                    </td>
-                    <td style="vertical-align: top;"><br>
-                    </td>
-                    <td style="vertical-align: top;"><br>
-                    </td>
-                    <td style="vertical-align: top;"><br>
-                    </td>
-                    <td style="vertical-align: top;"><br>
-                    </td>
-                    <td style="vertical-align: top;"><br>
-                    </td>
-                    <td style="vertical-align: top;"><br>
-                    </td>
-                    <td style="vertical-align: top;"><br>
+                    <td style="vertical-align: top;">
+                        Overweight Count = 6 <br>
+                        NoCall Count = 9 <br>
+                        Reversal Count = 0 <br>
                     </td>
                 </tr>
             </tbody>
