--- a/portfolio/portfolio/elevatorcontrol/package.html
+++ b/portfolio/portfolio/elevatorcontrol/package.html
@@ -27,17 +27,20 @@ of the latest required simulator release.</span><br>
   <li><a href="CarPositionControl.java">CarPositionControl.java</a> - the controller for CarPosition</li>
   <li><a href="LanternControl.java">LanternControl.java</a> - the controller for CarLantern</li>
   <li><a href="Dispatcher.java">Dispatcher.java</a> - the controller for Dispatcher</li>
-
   <li>...</li>
 </ul>
 <h2>Translator files</h2>
-Links and descriptions to all message translators used by the
-controllers.<br>
 <ul>
-  <li><a href="translator.java">Translator.java</a> - add a description
-and update the filename link</li>
+  <li><a href="DriveSpeedCanPayloadTranslator.java">DriveSpeedCanPayloadTranslator.java</a> - the translator for DriveSpeed</li>
+  <li><a href="DoorMotorCanPayloadTranslator.java">DoorMotorCanPayloadTranslator.java</a> - the translator for DoorMotor</li>
   <li>...<br>
   </li>
+</ul>
+<h2>Monitor files</h2>
+<ul>
+    <li><a href="Proj7RuntimeMonitor.java">Proj7RuntimeMonitor.java</a> - the Monitor for Overweight, Waste Opening, Reversal</li>
+    <li>...<br>
+    </li>
 </ul>
 <h2>Utility files</h2>
 <ul>
