--- a/portfolio/portfolio/portfolio.html
+++ b/portfolio/portfolio/portfolio.html
@@ -57,7 +57,7 @@ forward and backward traceability from statecharts to code</li>
   <li>Implementation</li>
   <ul>
     <li><a href="elevatorcontrol/package.html">Elevator Control Package</a>
-- CarButtonControl, HallButtonControl, DoorControl and DriveControl </li>
+- CarButtonControl, HallButtonControl, DoorControl, DriveControl, Dispatcher, CarPositionControl and LanternControl </li>
   </ul>
   <li>Test</li>
   <ul>
@@ -79,7 +79,7 @@ Summary
 File</a> - parseable list of integration test files<br>
     </li>
     <li><a href="acceptance_test/acceptance_test_log.html">Acceptance
-Test Log</a> - &lt;description here&gt;</li>
+Test Log</a> - Keep record on acceptance test</li>
     <li><a href="fault_tolerance/fault_tolerance_test_log.html">Fault
 Tolerance Test Log</a> - &lt;description here&gt;</li>
   </ul>
