--- a/portfolio/portfolio/reqs/requirements2.html
+++ b/portfolio/portfolio/reqs/requirements2.html
@@ -1545,11 +1545,11 @@
                     </td>
                     <td style="vertical-align: top;">X<br>
                     </td>
-                    <td style="vertical-align: top;">X<br>
+                    <td style="vertical-align: top;"><br>
                     </td>
-                    <td style="vertical-align: top;">X<br>
+                    <td style="vertical-align: top;"><br>
                     </td>
-                    <td style="vertical-align: top;">X<br>
+                    <td style="vertical-align: top;"><br>
                     </td>
                 </tr>
                 <tr>
@@ -1584,6 +1584,46 @@
                     <td style="vertical-align: top;">X<br>
                     </td>
                     <td style="vertical-align: top;">X<br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="vertical-align: top;">T5.7<br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
                     </td>
                     <td style="vertical-align: top;">X<br>
                     </td>
