--- a/portfolio/portfolio/traceability/sc_code.html
+++ b/portfolio/portfolio/traceability/sc_code.html
@@ -87,13 +87,13 @@ Traceability peformed by:&nbsp; &lt;Jiang He (jiangh)&gt;<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">260<br>
+            <td style="vertical-align: top;">248<br>
             </td>
             <td style="vertical-aligh: top;">T 8.1<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">273<br>
+            <td style="vertical-align: top;">263<br>
             </td>
             <td style="vertical-aligh: top;">T 8.2<br>
             </td>
@@ -115,61 +115,61 @@ Traceability peformed by:&nbsp; &lt;Xianle Wang (xianlew)&gt;<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">221<br>
+            <td style="vertical-align: top;">227<br>
             </td>
             <td style="vertical-aligh: top;">T 6.1<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">248<br>
+            <td style="vertical-align: top;">254<br>
             </td>
             <td style="vertical-aligh: top;">T 6.2<br>
             </td>
         </tr>
 		  <tr>
-            <td style="vertical-align: top;">225<br>
+            <td style="vertical-align: top;">231<br>
             </td>
             <td style="vertical-aligh: top;">T 6.3<br>
             </td>
         </tr>
 		  <tr>
-            <td style="vertical-align: top;">284<br>
+            <td style="vertical-align: top;">290<br>
             </td>
             <td style="vertical-aligh: top;">T 6.4<br>
             </td>
         </tr>
 		  <tr>
-            <td style="vertical-align: top;">229<br>
+            <td style="vertical-align: top;">235<br>
             </td>
             <td style="vertical-aligh: top;">T 6.5<br>
             </td>
         </tr>
 		   <tr>
-            <td style="vertical-align: top;">263<br>
+            <td style="vertical-align: top;">269<br>
             </td>
             <td style="vertical-aligh: top;">T 6.6<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">233<br>
+            <td style="vertical-align: top;">239<br>
             </td>
             <td style="vertical-aligh: top;">T 6.7<br>
             </td>
         </tr>
 		  <tr>
-            <td style="vertical-align: top;">310<br>
+            <td style="vertical-align: top;">316<br>
             </td>
             <td style="vertical-aligh: top;">T 6.8<br>
             </td>
         </tr>
 		  <tr>
-            <td style="vertical-align: top;">288<br>
+            <td style="vertical-align: top;">294<br>
             </td>
             <td style="vertical-aligh: top;">T 6.9<br>
             </td>
         </tr>
 		  <tr>
-            <td style="vertical-align: top;">314<br>
+            <td style="vertical-align: top;">320<br>
             </td>
             <td style="vertical-aligh: top;">T 6.10<br>
             </td>
@@ -190,25 +190,25 @@ Traceability peformed by:&nbsp; &lt;Shen Yu (sheny)&gt;<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">102<br>
+            <td style="vertical-align: top;">80<br>
             </td>
             <td style="vertical-aligh: top;">T 7.1<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">107<br>
+            <td style="vertical-align: top;">85<br>
             </td>
             <td style="vertical-aligh: top;">T 7.2<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">123<br>
+            <td style="vertical-align: top;">97<br>
             </td>
             <td style="vertical-aligh: top;">T 7.3<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">137<br>
+            <td style="vertical-align: top;">108<br>
             </td>
             <td style="vertical-aligh: top;">T 7.4<br>
             </td>
@@ -219,7 +219,7 @@ Traceability peformed by:&nbsp; &lt;Shen Yu (sheny)&gt;<br>
 <h2>CarButtonControl</h2>
 Author Name:&nbsp; &lt;Shen Yu (sheny)&gt;<br>
 Traceability peformed by:&nbsp; &lt;Qiang Zhang (qiangz)&gt;<br>
-<!--Table for HallButtonControl -->
+<!--Table for CarButtonControl -->
 <table style="width: 400px; height: 100px;" border="1" cellpadding="3" frame="border">
     <tbody>
         <tr>
@@ -229,20 +229,20 @@ Traceability peformed by:&nbsp; &lt;Qiang Zhang (qiangz)&gt;<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">136<br>
+            <td style="vertical-align: top;">128<br>
             </td>
             <td style="vertical-aligh: top;">T 9.1<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">148<br>
+            <td style="vertical-align: top;">140<br>
             </td>
             <td style="vertical-aligh: top;">T 9.2<br>
             </td>
         </tr>
     </tbody>
 </table>
-<!-- HallButtonControl End -->
+<!-- CarButtonControl End -->
 <h2>CarPositionControl</h2>
 Author Name:&nbsp; &lt;Shen Yu (sheny)&gt;<br>
 Traceability peformed by:&nbsp; &lt;Qiang Zhang (qiangz)&gt;<br>
