--- a/portfolio/portfolio/traceability/sc_code.html
+++ b/portfolio/portfolio/traceability/sc_code.html
@@ -344,7 +344,7 @@ Traceability peformed by:&nbsp; &lt;Qiang Zhang (qiangz)&gt;<br>
 <h2>Dispatcher</h2>
 Author Name:&nbsp; &lt;Xianle Wang (xianlew)&gt;<br>
 Traceability peformed by:&nbsp; &lt;Qiang Zhang (qiangz)&gt;<br>
-<!--Table for HallButtonControl -->
+<!--Table for Dispathcer -->
 <table style="width: 400px; height: 100px;" border="1" cellpadding="3" frame="border">
     <tbody>
         <tr>
