--- a/portfolio/portfolio/traceability/req_const_traceability.html
+++ b/portfolio/portfolio/traceability/req_const_traceability.html
@@ -458,7 +458,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td style="vertical-align: top;">6.10.1 currentFloor is not equal to mDesiredFloor and mDoorClosed is True and mDoorMotor is Stop --> 
+                    <td style="vertical-align: top;">6.10.2 currentFloor is not equal to mDesiredFloor and mDoorClosed is True and mDoorMotor is Stop --> 
 						  Drive[v,DesiredDirection]<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
@@ -505,7 +505,7 @@
                 </tr>
 					 
 					 <tr>
-                    <td style="vertical-align: top;">6.12 mDrive[s,d] consists with Drive[s,d]<br>
+                    <td style="vertical-align: top;">6.12 mDrive[s,d] is consistent with Drive[s,d]<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
